err/duinobot-socks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/duinobot'...
Compiling './lib/python3.5/site-packages/duinobot/duinobot.py'...
***   File "./lib/python3.5/site-packages/duinobot/duinobot.py", line 284
    print 'Línea = ' + str(self.getLine())
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/duinobot/pyfirmata'...
Compiling './lib/python3.5/site-packages/duinobot/pyfirmata/mockup.py'...
***   File "./lib/python3.5/site-packages/duinobot/pyfirmata/mockup.py", line 127
    raise IOError, "Cannot read from pin %d" \
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/duinobot/pyfirmata/pyfirmata.py'...
***   File "./lib/python3.5/site-packages/duinobot/pyfirmata/pyfirmata.py", line 586
    raise IOError, "%s is not an input and can therefore not report" % self
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/duinobot/pyfirmata/util.py'...
***   File "./lib/python3.5/site-packages/duinobot/pyfirmata/util.py", line 26
    raise IOError, "No boards found in %s with identifier %s" % (base_dir, identifier)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/duinobot_socks-0.15.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './usr'...
Listing './usr/share'...
Listing './usr/share/doc'...
Listing './usr/share/doc/duinobot'...
Listing './usr/share/doc/duinobot/ejemplos'...
Compiling './usr/share/doc/duinobot/ejemplos/analog.py'...
***   File "./usr/share/doc/duinobot/ejemplos/analog.py", line 11
    print b.analog(i, robotid=idr),
          ^
SyntaxError: invalid syntax

Compiling './usr/share/doc/duinobot/ejemplos/carrera.py'...
Compiling './usr/share/doc/duinobot/ejemplos/cuadrado.py'...
Compiling './usr/share/doc/duinobot/ejemplos/dubstep.py'...
***   File "./usr/share/doc/duinobot/ejemplos/dubstep.py", line 61
    print "acomodar Robots!!"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './usr/share/doc/duinobot/ejemplos/followline.py'...
Compiling './usr/share/doc/duinobot/ejemplos/imperialmarch.py'...
Compiling './usr/share/doc/duinobot/ejemplos/joystick.py'...
Compiling './usr/share/doc/duinobot/ejemplos/joystick_avanzado_con_servo.py'...
Compiling './usr/share/doc/duinobot/ejemplos/outofthebox.py'...
